--- a/nieruchomości/nieruchomości.csproj
+++ b/nieruchomości/nieruchomości.csproj
@@ -213,6 +213,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\EnumNameHelper.cs" />
     <Compile Include="Helpers\OwnHelpers.cs" />
     <Compile Include="Migrations\201412111105126_init.cs" />
     <Compile Include="Migrations\201412111105126_init.Designer.cs">
