--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -113,11 +113,13 @@
     <Compile Include="Admin\AdminFilterService.cs" />
     <Compile Include="Admin\AdminLoginService.cs" />
     <Compile Include="Admin\AppSettingsService.cs" />
+    <Compile Include="Admin\DeleteMessageService.cs" />
     <Compile Include="Admin\EnumNameService.cs" />
     <Compile Include="Admin\IAddAdvertService.cs" />
     <Compile Include="Admin\IAdminFilterService.cs" />
     <Compile Include="Admin\IAdminLoginService.cs" />
     <Compile Include="Admin\IAppSettingsService.cs" />
+    <Compile Include="Admin\IDeleteMessageService.cs" />
     <Compile Include="Admin\IEnumNameService.cs" />
     <Compile Include="Admin\IPhotoService.cs" />
     <Compile Include="Admin\IRepository.cs" />
