--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -89,6 +89,7 @@
     <Compile Include="ViewModels\Response.cs" />
     <Compile Include="ViewModels\Session.cs" />
     <Compile Include="ViewModels\ShowAdvert.cs" />
+    <Compile Include="ViewModels\ShowCalc.cs" />
     <Compile Include="ViewModels\ShowFlat.cs" />
     <Compile Include="ViewModels\ShowHouse.cs" />
     <Compile Include="ViewModels\ShowLand.cs" />
