--- a/nieruchomości/nieruchomości.csproj
+++ b/nieruchomości/nieruchomości.csproj
@@ -225,8 +225,15 @@
     <Compile Include="Migrations\201412111105126_init.Designer.cs">
       <DependentUpon>201412111105126_init.cs</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="Migrations\DbInitializer.cs" />
+    <Compile Include="Migrations\201412230647075_init1.cs" />
+    <Compile Include="Migrations\201412230647075_init1.Designer.cs">
+      <DependentUpon>201412230647075_init1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201412230701375_InitialMigrations.cs" />
+    <Compile Include="Migrations\201412230701375_InitialMigrations.Designer.cs">
+      <DependentUpon>201412230701375_InitialMigrations.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\IfModelChanges.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -1155,6 +1162,12 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201412111105126_init.resx">
       <DependentUpon>201412111105126_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412230647075_init1.resx">
+      <DependentUpon>201412230647075_init1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201412230701375_InitialMigrations.resx">
+      <DependentUpon>201412230701375_InitialMigrations.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
