--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -91,6 +91,7 @@
     <Compile Include="ViewModels\OfferStatus.cs" />
     <Compile Include="ViewModels\Response.cs" />
     <Compile Include="ViewModels\Session.cs" />
+    <Compile Include="ViewModels\SettingsViewModel.cs" />
     <Compile Include="ViewModels\ShowAdvert.cs" />
     <Compile Include="ViewModels\ShowCalc.cs" />
     <Compile Include="ViewModels\ShowFlat.cs" />
