--- a/nieruchomości/nieruchomości.csproj
+++ b/nieruchomości/nieruchomości.csproj
@@ -1160,6 +1160,7 @@
     <Content Include="Scripts\version.json" />
     <Content Include="Views\Home\CalcView.cshtml" />
     <Content Include="Views\Admin\Settings.cshtml" />
+    <Content Include="Views\Admin\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
