--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -114,6 +114,8 @@
     <Compile Include="AdminLoginService\Implementation\AdminLoginService.cs" />
     <Compile Include="AdvertServices\ChangeAdvertVisability\Implementation\ChangeAdvertVisibility.cs" />
     <Compile Include="AdvertServices\ChangeAdvertVisability\IChangeAdvertVisibility.cs" />
+    <Compile Include="AdvertServices\GetAdvertService\Implementation\GetAdvertService.cs" />
+    <Compile Include="AdvertServices\GetAdvertService\IGetAdvertService.cs" />
     <Compile Include="AppSettingsService\Implementation\AppSettingsService.cs" />
     <Compile Include="CalcService\ICalcService.cs" />
     <Compile Include="CalcService\Implementation\CalcService.cs" />
