--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -75,7 +75,7 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="ViewModels\AddSettingViewModel.cs" />
+    <Compile Include="ViewModels\AddClatViewModel.cs" />
     <Compile Include="ViewModels\AdminAdvertToAdd.cs" />
     <Compile Include="ViewModels\AdminAdvertToShow.cs" />
     <Compile Include="ViewModels\AdminFlat.cs" />
