--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -109,8 +109,12 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AdminSettingsService\IAdminSettingsService.cs" />
-    <Compile Include="AdminSettingsService\Implementation\AdminSettingsService.cs" />
+    <Compile Include="AdminSettingsService\IAdminSettingsService.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="AdminSettingsService\Implementation\AdminSettingsService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="AdvertServices\AddAdvertService\Implementation\AddAdvertService.cs" />
     <Compile Include="AdvertServices\AdminFilterAdvertService\Implementation\AdminFilterAdvertService.cs" />
     <Compile Include="AdminLoginService\Implementation\AdminLoginService.cs" />
