--- a/nieruchomości/nieruchomości.csproj
+++ b/nieruchomości/nieruchomości.csproj
@@ -1163,6 +1163,7 @@
     <Content Include="Views\Admin\Settings.cshtml" />
     <Content Include="Views\Admin\View.cshtml" />
     <Content Include="Views\Admin\AddClat.cshtml" />
+    <Content Include="Views\Admin\AddClatTable.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
