--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -35,6 +35,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PagedList">
+      <HintPath>..\packages\PagedList.1.17.0.0\lib\net40\PagedList.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -76,6 +79,8 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <Compile Include="ViewModels\AddClatViewModel.cs" />
+    <Compile Include="ViewModels\AdList.cs" />
+    <Compile Include="ViewModels\AdListFilter.cs" />
     <Compile Include="ViewModels\AdminAdvertToAdd.cs" />
     <Compile Include="ViewModels\AdminAdvertToShow.cs" />
     <Compile Include="ViewModels\AdminFlat.cs" />
