--- a/Models/packages.config
+++ b/Models/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="bootstrap" version="3.3.1" targetFramework="net45" />
   <package id="jQuery" version="1.9.0" targetFramework="net45" />
+  <package id="PagedList" version="1.17.0.0" targetFramework="net45" />
 </packages>
