--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -122,6 +122,8 @@
     <Compile Include="AdvertServices\ChangeAdvertVisability\IChangeAdvertVisibility.cs" />
     <Compile Include="AdvertServices\GetAdvertService\Implementation\GetAdvertService.cs" />
     <Compile Include="AdvertServices\GetAdvertService\IGetAdvertService.cs" />
+    <Compile Include="AdvertServices\GetNextPreviousService\Implementation\GetNextPreviousService.cs" />
+    <Compile Include="AdvertServices\GetNextPreviousService\IGetNextPreviousService.cs" />
     <Compile Include="AppSettingsService\Implementation\AppSettingsService.cs" />
     <Compile Include="CalcService\ICalcService.cs" />
     <Compile Include="CalcService\Implementation\CalcService.cs" />
