--- a/nieruchomości/Web.Debug.config
+++ b/nieruchomości/Web.Debug.config
@@ -14,6 +14,11 @@
         xdt:Transform="SetAttributes" xdt:Locator="Match(name)"/>
     </connectionStrings>
   -->
+
+  <connectionStrings>
+    <add name="Context.ApplicationContext" connectionString="workstation id=nieruchomosci.mssql.somee.com;packet size=4096;user id=laptop_service_SQLLogin_1;pwd=bbheneuihw;data source=nieruchomosci.mssql.somee.com;persist security info=False;initial catalog=nieruchomosci;MultipleActiveResultSets=true"
+      providerName="System.Data.SqlClient"/>
+  </connectionStrings>
   <system.web>
     <!--
       In the example below, the "Replace" transform will replace the entire 
