--- a/Services/Services.csproj
+++ b/Services/Services.csproj
@@ -115,6 +115,8 @@
     <Compile Include="AdminSettingsService\Implementation\AdminSettingsService.cs">
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="AdvertCitiesService\Implementation\AdvertCitiesService.cs" />
+    <Compile Include="AdvertCitiesService\Implementation\IAdvertCitiesService.cs" />
     <Compile Include="AdvertServices\AddAdvertService\Implementation\AddAdvertService.cs" />
     <Compile Include="AdvertServices\AdminFilterAdvertService\Implementation\AdminFilterAdvertService.cs" />
     <Compile Include="AdminLoginService\Implementation\AdminLoginService.cs" />
@@ -122,13 +124,18 @@
     <Compile Include="AdvertServices\ChangeAdvertVisability\IChangeAdvertVisibility.cs" />
     <Compile Include="AdvertServices\GetAdvertService\Implementation\GetAdvertService.cs" />
     <Compile Include="AdvertServices\GetAdvertService\IGetAdvertService.cs" />
+    <Compile Include="AdvertServices\GetFiltredAdvertsService\Implementation\GetFiltredAdvertsService.cs" />
+    <Compile Include="AdvertServices\GetFiltredAdvertsService\Implementation\IGetFiltredAdvertsService.cs" />
     <Compile Include="AdvertServices\GetNextPreviousService\Implementation\GetNextPreviousService.cs" />
     <Compile Include="AdvertServices\GetNextPreviousService\IGetNextPreviousService.cs" />
+    <Compile Include="AdvertServices\SortAdvertService\ISortAdvertService.cs" />
+    <Compile Include="AdvertServices\SortAdvertService\Implementation\SortAdvertService.cs" />
     <Compile Include="AppSettingsService\Implementation\AppSettingsService.cs" />
     <Compile Include="CalcService\ICalcService.cs" />
     <Compile Include="CalcService\Implementation\CalcService.cs" />
     <Compile Include="DeleteMessageService\Implementation\DeleteMessageService.cs" />
     <Compile Include="EnumNameService\Implementation\EnumNameService.cs" />
+    <Compile Include="FilterIndexService\Implementation\FilterIndexService.cs" />
     <Compile Include="GenericRepository\Implementation\GenericRepository.cs" />
     <Compile Include="AdvertServices\AddAdvertService\IAddAdvertService.cs" />
     <Compile Include="AdvertServices\AdminFilterAdvertService\IAdminFilterAdvertService.cs" />
@@ -180,6 +187,7 @@
       <Name>Models</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\AutoMapper.3.3.0\tools\AutoMapper.targets" Condition="Exists('..\packages\AutoMapper.3.3.0\tools\AutoMapper.targets')" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
