--- a/nieruchomości/nieruchomości.csproj
+++ b/nieruchomości/nieruchomości.csproj
@@ -265,6 +265,66 @@
     <Content Include="Content\CSS\Site.css" />
     <Content Include="Content\img\box_slant_red_bot.png" />
     <Content Include="Content\img\box_slant_red_top.png" />
+    <Content Include="Content\img\icons\social-1-pinterest.png" />
+    <Content Include="Content\img\icons\social-10-wordpress.png" />
+    <Content Include="Content\img\icons\social-11-instapaper.png" />
+    <Content Include="Content\img\icons\social-12-evernote.png" />
+    <Content Include="Content\img\icons\social-13-xing.png" />
+    <Content Include="Content\img\icons\social-14-zootool.png" />
+    <Content Include="Content\img\icons\social-15-dribbble.png" />
+    <Content Include="Content\img\icons\social-16-deviantart.png" />
+    <Content Include="Content\img\icons\social-17-read-it-later.png" />
+    <Content Include="Content\img\icons\social-18-linked-in.png" />
+    <Content Include="Content\img\icons\social-19-forrst.png" />
+    <Content Include="Content\img\icons\social-2-dropbox.png" />
+    <Content Include="Content\img\icons\social-20-pinboard.png" />
+    <Content Include="Content\img\icons\social-21-behance.png" />
+    <Content Include="Content\img\icons\social-22-github.png" />
+    <Content Include="Content\img\icons\social-23-youtube.png" />
+    <Content Include="Content\img\icons\social-24-skitch.png" />
+    <Content Include="Content\img\icons\social-25-foursquare.png" />
+    <Content Include="Content\img\icons\social-26-quora.png" />
+    <Content Include="Content\img\icons\social-27-badoo.png" />
+    <Content Include="Content\img\icons\social-28-spotify.png" />
+    <Content Include="Content\img\icons\social-29-stumbleupon.png" />
+    <Content Include="Content\img\icons\social-3-google-plus.png" />
+    <Content Include="Content\img\icons\social-30-readability.png" />
+    <Content Include="Content\img\icons\social-31-facebook.png" />
+    <Content Include="Content\img\icons\social-32-twitter.png" />
+    <Content Include="Content\img\icons\social-33-instagram.png" />
+    <Content Include="Content\img\icons\social-34-posterous-spaces.png" />
+    <Content Include="Content\img\icons\social-35-vimeo.png" />
+    <Content Include="Content\img\icons\social-36-flickr.png" />
+    <Content Include="Content\img\icons\social-37-last-fm.png" />
+    <Content Include="Content\img\icons\social-38-rss.png" />
+    <Content Include="Content\img\icons\social-39-skype.png" />
+    <Content Include="Content\img\icons\social-4-jolicloud.png" />
+    <Content Include="Content\img\icons\social-40-e-mail.png" />
+    <Content Include="Content\img\icons\social-41-vine.png" />
+    <Content Include="Content\img\icons\social-42-myspace.png" />
+    <Content Include="Content\img\icons\social-43-goodreads.png" />
+    <Content Include="Content\img\icons\social-44-apple.png" />
+    <Content Include="Content\img\icons\social-45-windows.png" />
+    <Content Include="Content\img\icons\social-46-yelp.png" />
+    <Content Include="Content\img\icons\social-47-playstation.png" />
+    <Content Include="Content\img\icons\social-48-xbox.png" />
+    <Content Include="Content\img\icons\social-49-android.png" />
+    <Content Include="Content\img\icons\social-5-yahoo.png" />
+    <Content Include="Content\img\icons\social-50-ios.png" />
+    <Content Include="Content\img\icons\social-51-wikipedia.png" />
+    <Content Include="Content\img\icons\social-52-pocket.png" />
+    <Content Include="Content\img\icons\social-53-steam.png" />
+    <Content Include="Content\img\icons\social-54-souncloud.png" />
+    <Content Include="Content\img\icons\social-55-slideshare.png" />
+    <Content Include="Content\img\icons\social-56-netflix.png" />
+    <Content Include="Content\img\icons\social-57-paypal.png" />
+    <Content Include="Content\img\icons\social-58-google-drive.png" />
+    <Content Include="Content\img\icons\social-59-linux-foundation.png" />
+    <Content Include="Content\img\icons\social-6-blogger.png" />
+    <Content Include="Content\img\icons\social-60-ebay.png" />
+    <Content Include="Content\img\icons\social-7-picasa.png" />
+    <Content Include="Content\img\icons\social-8-amazon.png" />
+    <Content Include="Content\img\icons\social-9-tumblr.png" />
     <Content Include="Content\img\searchbox_slant_gray_top.png" />
     <Content Include="Content\img\the-palace-of-culture.jpg" />
     <Content Include="Content\ng-grid.css" />
