--- a/nieruchomości/nieruchomości.csproj
+++ b/nieruchomości/nieruchomości.csproj
@@ -265,6 +265,7 @@
     <Content Include="Content\CSS\Site.css" />
     <Content Include="Content\img\box_slant_red_bot.png" />
     <Content Include="Content\img\box_slant_red_top.png" />
+    <Content Include="Content\img\brakzdjecia.png" />
     <Content Include="Content\img\icons\social-1-pinterest.png" />
     <Content Include="Content\img\icons\social-10-wordpress.png" />
     <Content Include="Content\img\icons\social-11-instapaper.png" />
@@ -325,6 +326,8 @@
     <Content Include="Content\img\icons\social-7-picasa.png" />
     <Content Include="Content\img\icons\social-8-amazon.png" />
     <Content Include="Content\img\icons\social-9-tumblr.png" />
+    <Content Include="Content\img\logo.png" />
+    <Content Include="Content\img\mainmenu_slant.png" />
     <Content Include="Content\img\searchbox_slant_gray_top.png" />
     <Content Include="Content\img\the-palace-of-culture.jpg" />
     <Content Include="Content\ng-grid.css" />
@@ -464,9 +467,32 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="Content\bootstrap-theme.css.map" />
     <Content Include="Content\bootstrap.css.map" />
+    <Content Include="fonts\glyphicons-halflings-regular.woff2" />
     <None Include="Properties\PublishProfiles\nieruchomosci - FTP %282%29.pubxml" />
     <None Include="Properties\PublishProfiles\nieruchomosci - Web Deploy.pubxml" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\CHANGELOG.md" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\README.md" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\sprite.psd" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\.gitattributes" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\lib\jquery-1.10.1.min.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\lib\jquery-1.9.0.min.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\lib\jquery.mousewheel-3.0.6.pack.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\blank.gif" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\fancybox_loading%402x.gif" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\fancybox_loading.gif" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\fancybox_overlay.png" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\fancybox_sprite%402x.png" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\fancybox_sprite.png" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\helpers\fancybox_buttons.png" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\helpers\jquery.fancybox-buttons.css" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\helpers\jquery.fancybox-buttons.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\helpers\jquery.fancybox-media.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\helpers\jquery.fancybox-thumbs.css" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\helpers\jquery.fancybox-thumbs.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\jquery.fancybox.css" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\jquery.fancybox.js" />
+    <Content Include="Scripts\fancyapps-fancyBox-18d1712\source\jquery.fancybox.pack.js" />
     <Content Include="Scripts\i18n\angular-locale_aa-dj.js" />
     <Content Include="Scripts\i18n\angular-locale_aa-er.js" />
     <Content Include="Scripts\i18n\angular-locale_aa-et.js" />
