--- a/Models/Models.csproj
+++ b/Models/Models.csproj
@@ -63,19 +63,12 @@
     <Compile Include="EntityModels\Base.cs" />
     <Compile Include="EntityModels\Flat.cs" />
     <Compile Include="EntityModels\House.cs" />
-    <Compile Include="EntityModels\Interfaces\IAd.cs" />
-    <Compile Include="EntityModels\Interfaces\IBase.cs" />
-    <Compile Include="EntityModels\Interfaces\IFlat.cs" />
-    <Compile Include="EntityModels\Interfaces\IHouse.cs" />
-    <Compile Include="EntityModels\Interfaces\ILand.cs" />
-    <Compile Include="EntityModels\Interfaces\IWorker.cs" />
     <Compile Include="EntityModels\Land.cs" />
     <Compile Include="EntityModels\Mail.cs" />
     <Compile Include="EntityModels\Offer.cs" />
     <Compile Include="EntityModels\Photo.cs" />
     <Compile Include="EntityModels\PropertyType.cs" />
     <Compile Include="EntityModels\Statistics.cs" />
-    <Compile Include="EntityModels\Worker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\StringResource.Designer.cs">
       <DependentUpon>StringResource.resx</DependentUpon>
@@ -90,7 +83,6 @@
     <Compile Include="ViewModels\AdminFlat.cs" />
     <Compile Include="ViewModels\AdminHouse.cs" />
     <Compile Include="ViewModels\AdminLand.cs" />
-    <Compile Include="ViewModels\AdminWorker.cs" />
     <Compile Include="ViewModels\AdType.cs" />
     <Compile Include="ViewModels\AdvertNeighbours.cs" />
     <Compile Include="ViewModels\AdvertToShow.cs" />
@@ -104,6 +96,7 @@
     <Compile Include="ViewModels\IndexFilterOptions.cs" />
     <Compile Include="ViewModels\IndexViewModel.cs" />
     <Compile Include="ViewModels\LoginViewModel.cs" />
+    <Compile Include="ViewModels\MapCords.cs" />
     <Compile Include="ViewModels\NewestAdvert.cs" />
     <Compile Include="ViewModels\OfferStatus.cs" />
     <Compile Include="ViewModels\Response.cs" />
@@ -121,11 +114,8 @@
     <Compile Include="ViewModels\ShowListHouse.cs" />
     <Compile Include="ViewModels\ShowListLand.cs" />
     <Compile Include="ViewModels\ShowListPhoto.cs" />
-    <Compile Include="ViewModels\ShowWorker.cs" />
     <Compile Include="ViewModels\SortOption.cs" />
     <Compile Include="ViewModels\Visit.cs" />
-    <Compile Include="ViewModels\WorkerAdverts.cs" />
-    <Compile Include="ViewModels\WorkersViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
